Fix spacing on about and contact

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -629,7 +629,7 @@ header, footer {
    display: flex;
    box-sizing: border-box;
    vertical-align: top;
-   margin-top: 80px;
+   margin-top: 40px;
 }
 
 .contact {
